# clippy-shim

./: .typos.toml  Cargo.toml  README.md  taskfile.yaml
.cargo/: config.toml
.github/workflows/: build.yaml  release.yaml
src/: lib.rs  main.rs
