[package]
name = "clippy-shim"
version = "0.0.1"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = ""
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/clippy-shim"
repository = "https://github.com/romnn/clippy-shim"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
unreachable      = "deny"
unimplemented    = "deny"
todo             = "deny"
indexing_slicing = "deny"
missing_errors_doc = "warn"

[dependencies]
